2009-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* UPDATE_BOOTLOADER: made lilo update the boot record even
	  on a degraded RAID array

2009-08-20 Arjan Bouter <abouter@sourcemage.org>
	* latest.defaults: updated latest zen
	* info/patches/zen_patches/2.6.30-zen3.5: added latest zen kernel

2009-08-18 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.31: added

2009-08-17 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.30: added

2009-08-16 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.30.5
	* info/patches/maintenance_patches/patch-2.6.30.5: added

2009-08-15 Arjan Bouter <abouter@sourcemage.org>
	* latest.defaults: updated latest pre2.6 and zen
	* info/patches/PRE_2_6/patch-2.6.31-rc6: added
	* info/patches/zen_patches/2.6.30-zen3: added latest zen kernel

2009-07-31 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.29: added

2009-07-31 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.30.4
	* info/patches/maintenance_patches/patch-2.6.30.4: added

2009-07-30 Arjan Bouter <abouter@sourcemage.org>
	* BUILD, INSTALL: disabled xen trickery
	* latest.defaults: updated latest maintenance, pre2.6 and zen
	* info/patches/maintenance_patches/patch-2.6.30.3: added
	* info/patches/PRE_2_6/patch-2.6.31-rc4: added
	* info/patches/zen_patches/2.6.30-zen1: added latest zen kernel

2009-07-25 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.28: added

2009-07-20 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.30.2
	* info/patches/maintenance_patches/patch-2.6.30.2: added

2009-07-20 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.27: added

2009-07-17 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.26: added
