@@ -1,0 +1,5 @@
+appliedkernels="2.6.30"
+patchversion="${appliedkernels}-bfs-209"
+source="${appliedkernels}-sched-bfs-209.patch"
+source_url="http://ck.kolivas.org/patches/bfs/${source}"
+md5sum="5f357b38b62e28c8283517b1b4953e1a"
