@@ -1,6 +1,8 @@
 2009-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* UPDATE_BOOTLOADER: made lilo update the boot record even
 	  on a degraded RAID array
+	* info/patches/ck_bfs/2.6.30-sched-bfs-209.patch: added Con Kolivas'
+	  new scheduler
 
 2009-08-20 Arjan Bouter <abouter@sourcemage.org>
 	* latest.defaults: updated latest zen
